# dw-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  windows_tips.txt
dwgenerator/: cli.py  dbobjects.py  mappings.py  templates.py
dwgenerator/sql/: hub_view.sql  link_view.sql  satellite_view.sql
dwgenerator/sql/bq/: create_table.sql  external_param.sql  hub_select.sql  link_select.sql  satellite_select.sql
dwgenerator/sql/greenplum/: hub_view.sql  link_view.sql  satellite_view.sql
dwgenerator/sql/ksql/: hub_view.sql  link_view.sql  satellite_view.sql
dwgenerator/sql/lf_template/: create_persisted.sql  create_table.sql  external_param.sql  link_select.sql  satellite_select.sql
dwgenerator/sql/oracle/: create_view.sql
dwgenerator/sql/snowflake/: create_view.sql  hub_view.sql  link_view.sql  satellite_view.sql
dwgenerator/sql/standard/: create_table.sql  external_param.sql  hub_select.sql  hub_view.sql  link_etl.sql  link_select.sql  link_view.sql  satellite_etl.sql  satellite_select.sql  satellite_view.sql  version_pointer_select.sql
metadata/column/: customer.csv
metadata/table/: table_mappings.csv
sql/: application_h.sql  co_customer_application_l.sql  customer_application_l.sql  customer_h.sql  groupby_h.sql  winfunction_h.sql
tests/: test_dbobjects.py  test_mappings.py  test_standard_templates.py  test_standard_vp_templates.py  test_statndard_templates.py
