[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dwgenerator"
version = "0.2.1"
authors = [
  { name="Daniel Fagerstrom" },
]
description = "Create data warehouse DDLs and queries based on patterns"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.0.1",
    "colorama~=0.4.4",
    "Jinja2~=3.0.1",
    "MarkupSafe~=2.0.1",
]

[project.scripts]
dwgenerator = "dwgenerator.cli:cli"

[project.urls]
"Homepage" = "https://github.com/TopOfMinds/dw-generator"
"Bug Tracker" = "https://github.com/TopOfMinds/dw-generator/issues"