[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dwgenerator"
version = "0.2.3"
authors = [
  { name="Daniel Fagerstrom" },
]
description = "Create data warehouse DDLs and queries based on patterns"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.0.1",
    "colorama~=0.4.4",
    "Jinja2~=3.0.1",
    "MarkupSafe~=2.0.1",
]

[tool.setuptools_scm]

[project.scripts]
dwgenerator = "dwgenerator.cli:cli"

[project.urls]
"Homepage" = "https://github.com/TopOfMinds/dw-generator"
"Bug Tracker" = "https://github.com/TopOfMinds/dw-generator/issues"